# Code

./: .gitignore  .gitmodules  README.md  段错误，核心已转储。解决方案.md
Ubuntu_package_install/: ubuntu_startup.txt
bme280/: bme280_i2c.c  bme280_i2c.h
clist/: Makefile  list.c  list.h  list_custom.c  list_custom.h  main.c  sal.h  test
ipv4/: README.MD
json_test/: Makefile  main.c  out.json  test  test.json  test.json_bak  util.c  util.h
json_test/cJSON/: Makefile
makefile/: Makefile  README.md
makefile/cJSON/: Makefile
makefile/cJSON/mod/: Makefile
makefile/make/: Makefile  main  main.c  test.c  test.h
makefile/make/include/: cJSON.h
makefile/make/mod/app/: Makefile  app.c  app.h
makefile/make/source/: cJSON_Utils.h
makefile/onvif_3/: README.md  folder_tree.md
makefile/onvif_3/mod/openssl/: Makefile
makefile/test_makefile/: Makefile  main.c  test  test.c  test.h
makefile/test_makefile/include/: test.h
makefile_1/cJSON/: README.md  envset.sh  main
makefile_1/cJSON/app/: Makefile  main.c  object.map
makefile_1/onvif_3/: envset.sh
makefile_1/onvif_3/app/: Makefile  main.c
makefile_1/onvif_3/mod/: Makefile
malloc/: xmalloc.c
message_queue/: CMakeLists.txt  msg_receive.c  msg_send.c
openssl/: Linux 编译安装 openssl库.md
qv2ray/: ubuntu 安装 qv2ray教程.md
remote_call/: Makefile  calc.h  calcserver  calcserver.c  soapC.c  soapH.h  soapServer.c  soapStub.h
remote_call/client/: Makefile  calc.h  calcclient  calcclient.c  soapC.c  soapClient.c  soapStub.h
socket/: CMakeLists.txt  sock_client.c  sock_server.c
str/: ipv4_test.c
(+5 files in other folders)
